--- a/WpfApp1/Tutorial.xaml
+++ b/WpfApp1/Tutorial.xaml
@@ -20,7 +20,6 @@
         <Grid Grid.Column="1" Margin="20">
             <StackPanel>
                 <Component:SearchBar/>
-
                 <Grid Margin="0, 20, 0, 0" Name="Category_grid">
                     <ScrollViewer VerticalScrollBarVisibility="Visible" Height="680">
                         <ItemsControl ItemsSource="{Binding CategoryItems}">
@@ -72,6 +71,7 @@
                                             PostTitle="{Binding Title}" 
                                             PostDescription="{Binding Article}" 
                                             SenderIcon="{Binding Icon}"
+                                            PostImage="{Binding Bitmap}"
                                             />
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
