--- a/WpfApp1/Community.xaml
+++ b/WpfApp1/Community.xaml
@@ -19,7 +19,7 @@
 
         <Grid Grid.Column="1" Margin="20">
             <StackPanel>
-                <Component:SearchBar Margin="0, 20" Loaded="SearchBar_Loaded"/>
+                <Component:SearchBar Margin="0, 20"/>
 
                 <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Hidden" Height="649" PanningMode="VerticalOnly">
                     <StackPanel>
