feat: Modify PostCard component

--- a/WpfApp1/Community.xaml
+++ b/WpfApp1/Community.xaml
@@ -21,9 +21,9 @@
             <StackPanel>
                 <Component:SearchBar Margin="0, 20"/>
 
-                <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Hidden" Height="649" PanningMode="VerticalOnly">
+                <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Hidden" Height="649" PanningMode="VerticalOnly">
                     <StackPanel>
-                        <Border Background="White" Width="900" Padding="20" Margin="5,20,5,0" CornerRadius="15">
+                        <Border Background="White" Width="840" Padding="20" Margin="5,20,5,0" CornerRadius="15">
                             <Border.Effect>
                                 <DropShadowEffect Color="Black" BlurRadius="10" ShadowDepth="3" Opacity="0.4"/>
                             </Border.Effect>
@@ -103,7 +103,7 @@
                                 </Button>
                             </StackPanel>
                         </Border>
-                        <Border Background="White" Width="900" Padding="20" Margin="5,20,5,0" CornerRadius="15">
+                        <Border Background="White" Width="840" Padding="20" Margin="5,20,5,0" CornerRadius="15">
                             <Border.Effect>
                                 <DropShadowEffect Color="Black" BlurRadius="10" ShadowDepth="3" Opacity="0.4"/>
                             </Border.Effect>
@@ -145,7 +145,7 @@
                             </StackPanel>
                         </Border>
 
-                        <Border Background="White" Width="900" Padding="20" Margin="5,20,5,0" CornerRadius="15" BorderBrush="#D6E0EF" BorderThickness="3">
+                        <Border Background="White" Width="840" Padding="20" Margin="5,20,5,0" CornerRadius="15" BorderBrush="#D6E0EF" BorderThickness="3">
                             <StackPanel>
                                 <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
                                     <Image Source="/icon/profile.png" Width="40" Height="40" Margin="0,0,10,0">
