--- a/WpfApp1/Component/PostCard.xaml
+++ b/WpfApp1/Component/PostCard.xaml
@@ -6,11 +6,11 @@
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignWidth="910">
-    <Border Background="White" Width="840" Padding="20" Margin="5,20,5,0" CornerRadius="15">
+    <!--<Border Background="White" Width="840" Padding="20" Margin="5,20,5,0" CornerRadius="15">
         <Border.Effect>
             <DropShadowEffect Color="Black" BlurRadius="10" ShadowDepth="3" Opacity="0.4"/>
         </Border.Effect>
-        <!-- Header: Profile Picture and Account Name -->
+        --><!-- Header: Profile Picture and Account Name --><!--
         <StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
                 <Image Source="{Binding ProfilePicture, TargetNullValue='/icon/default_profile.png'}" Width="40" Height="40" Margin="0,0,10,0">
@@ -24,7 +24,7 @@
                 </StackPanel>
             </StackPanel>
 
-            <!-- Image/Video Preview -->
+            --><!-- Image/Video Preview --><!--
             <Border Background="#E0E0E0" Height="250" CornerRadius="10" Margin="0,0,0,10">
                 <Grid>
                     <Image Source="{Binding PostImage, RelativeSource={RelativeSource AncestorType=UserControl}}"
@@ -32,7 +32,7 @@
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"/>
                     
-                    <!-- Wrapper Grid for Play Icon with Drop Shadow Effect -->
+                    --><!-- Wrapper Grid for Play Icon with Drop Shadow Effect --><!--
                     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
                         <Grid.Effect>
                             <DropShadowEffect Color="Black"
@@ -41,7 +41,7 @@
                                   Opacity="0.5"/>
                         </Grid.Effect>
 
-                        <!-- Play Icon -->
+                        --><!-- Play Icon --><!--
                         <iconPacks:PackIconMaterial Kind="PlayCircleOutline"
                                         Width="100" Height="Auto"
                                         Foreground="White"
@@ -50,12 +50,12 @@
                 </Grid>
             </Border>
 
-            <!-- Post Description -->
+            --><!-- Post Description --><!--
             <TextBlock Text="{Binding PostDescription, TargetNullValue='No description provided.'}" 
                    FontSize="14" Foreground="#444" TextWrapping="Wrap" Margin="0,0,0,10"/>
             <TextBlock Text="Read More" Foreground="#2D2BC8" FontSize="14" FontWeight="SemiBold" Margin="0,0,0,10"/>
 
-            <!-- Footer: Likes, Comments, Shares -->
+            --><!-- Footer: Likes, Comments, Shares --><!--
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,0">
                 <StackPanel Orientation="Horizontal" Margin="0, 0, 20, 0">
                     <Image Source="/icon/like.png" Width="18" Height="18" Margin="0,0,5,0"/>
@@ -71,8 +71,8 @@
                 </StackPanel>
             </StackPanel>
         </StackPanel>
-    </Border>
-    <!--<Border Background="White" Width="900" Padding="20" Margin="5,20,5,0" CornerRadius="15" BorderBrush="#D6E0EF" BorderThickness="3">
+    </Border>-->
+    <Border Background="White" Width="900" Padding="20" Margin="5,20,5,0" CornerRadius="15" BorderBrush="#D6E0EF" BorderThickness="3">
         <StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
                 <Image Source="{Binding SenderIcon, RelativeSource={RelativeSource AncestorType=UserControl}, TargetNullValue='../icon/profile.png'}" Width="40" Height="40" Margin="0,0,10,0">
@@ -88,13 +88,13 @@
 
             <Border Background="#E0E0E0" Height="250" CornerRadius="10" Margin="0,0,0,10" VerticalAlignment="Center" HorizontalAlignment="Center">
                 <Grid>
-                    --><!-- Background Image --><!--
+                     Background Image 
                     <Image Source="{Binding PostImage, RelativeSource={RelativeSource AncestorType=UserControl}}"
                Stretch="UniformToFill"
                HorizontalAlignment="Center"
                VerticalAlignment="Center"/>
 
-                    --><!-- Wrapper Grid for Play Icon with Drop Shadow Effect --><!--
+                     Wrapper Grid for Play Icon with Drop Shadow Effect 
                     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
                         <Grid.Effect>
                             <DropShadowEffect Color="Black"
@@ -103,7 +103,7 @@
                                   Opacity="0.5"/>
                         </Grid.Effect>
 
-                        --><!-- Play Icon --><!--
+                         Play Icon 
                         <iconPacks:PackIconMaterial Kind="PlayCircleOutline"
                                         Width="100" Height="Auto"
                                         Foreground="White"
@@ -127,5 +127,5 @@ FontSize="14" Foreground="#444" TextWrapping="Wrap" Margin="0,0,0,10"/>
                 <StackPanel Orientation="Horizontal"/>
             </StackPanel>
         </StackPanel>
-    </Border>-->
+    </Border>
 </UserControl>
