--- a/WpfApp1/Community.xaml
+++ b/WpfApp1/Community.xaml
@@ -29,10 +29,9 @@
                             </Border.Effect>
                             <StackPanel>
                                 <TextBlock Text="Create Post" FontWeight="Bold" FontSize="18" Foreground="#32324D" Margin="0,0,0,10"/>
-                                <TextBox Height="40" Background="#F5F5F5" Foreground="#666" FontSize="14" Padding="10" Text="Write something..." BorderThickness="0" Margin="0,0,0,10"/>
-
+                                <Component:WriteBar x:Name="writebar"/>
                                 <!-- Image and Video Buttons -->
-                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,0,10">
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,10">
                                     <!-- Image Button -->
                                     <Button Width="120" Height="40" Background="White" BorderBrush="#D6E0EF" BorderThickness="1" Cursor="Hand" Padding="10">
                                         <StackPanel Orientation="Horizontal">
@@ -105,28 +104,27 @@
                         </Border>
                         
                         <Grid Grid.Column="1" Margin="0,0,0,0" Name="Tutorial_grid" Visibility="Hidden">
-                            <StackPanel >
-                                <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Hidden" Height="680" PanningMode="VerticalOnly">
+                            <!--<StackPanel>-->
+                                <!--<ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Hidden" Height="680" PanningMode="VerticalOnly">-->
                                     <StackPanel>
                                         <ItemsControl ItemsSource="{Binding TutorialItems}">
                                             <ItemsControl.ItemTemplate>
                                                 <DataTemplate>
                                                     <Component:PostCard 
-                            AdminName="{Binding AdminName}"
-                            SenderIcon="{Binding Icon}"
-                            PostTitle="{Binding Title}" 
-                            PostDescription="{Binding Description}" 
-                            PostImage="{Binding Bitmap}"
-                            DaySincePost="{Binding DaysSincePost}"
-                            CommentsCount="{Binding CommentsCount}"
-                            MouseLeftButtonDown="PostCard_LeftMouseButton"
-                            />
+                                                    AdminName="{Binding AdminName}"
+                                                    SenderIcon="{Binding Icon}"
+                                                    PostTitle="{Binding Title}" 
+                                                    PostDescription="{Binding Description}" 
+                                                    PostImage="{Binding Bitmap}"
+                                                    DaySincePost="{Binding DaysSincePost}"
+                                                    CommentsCount="{Binding CommentsCount}"
+                                                    MouseLeftButtonDown="PostCard_LeftMouseButton"/>
                                                 </DataTemplate>
                                             </ItemsControl.ItemTemplate>
                                         </ItemsControl>
                                     </StackPanel>
-                                </ScrollViewer>
-                            </StackPanel>
+                                <!--</ScrollViewer>-->
+                            <!--</StackPanel>-->
                         </Grid>
                     </StackPanel>
                 </ScrollViewer>
