--- a/WpfApp1/Community.xaml
+++ b/WpfApp1/Community.xaml
@@ -29,7 +29,16 @@
                             </Border.Effect>
                             <StackPanel>
                                 <TextBlock Text="Create Post" FontWeight="Bold" FontSize="18" Foreground="#32324D" Margin="0,0,0,10"/>
-                                <Component:WriteBar x:Name="writebar"/>
+                                <TextBox x:Name="WritePostTextBox"
+                                         Height="40"
+                                         Background="#F5F5F5"
+                                         Foreground="#666"
+                                         FontSize="14"
+                                         Padding="10"
+                                         Text="Write something..."
+                                         BorderThickness="0"
+                                         Margin="0,0,0,10" TextChanged="WritePostTextBox_TextChanged"/>
+                                <!--<Component:WriteBar x:Name="writebar"/>-->
                                 <!-- Image and Video Buttons -->
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,10">
                                     <!-- Image Button -->
@@ -78,7 +87,8 @@
                                 </StackPanel>
 
                                 <!-- Post Button -->
-                                <Button Width="120" Height="40" Background="#2D2BC8" Foreground="White" BorderThickness="0" HorizontalAlignment="Right" Padding="10" Cursor="Hand">
+                                <Button x:Name="PostButton" Width="120" Height="40" Background="#2D2BC8"
+                                        Foreground="White" BorderThickness="0" HorizontalAlignment="Right" Padding="10" Cursor="Hand" Click="PostButton_Click">
                                     <StackPanel Orientation="Horizontal">
                                         <!-- Icon on the left -->
                                         <Image Source="/icon/pen.png" Width="20" Height="20" Margin="0,0,5,0"/>
